force-app/main/default/objects/cpm__DummyPSP_Settings__c/fields/cpm__Default__c.field-meta.xml
<CustomField>
    <fullName>cpm__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>