force-app/main/default/objects/cpm__DummyPSP_Settings__c/fields/cpm__My_Password__c.field-meta.xml
<CustomField>
    <fullName>cpm__My_Password__c</fullName>
    <label>My Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>