force-app/main/default/objects/cpm__DummyPSP_Settings__c/fields/cpm__Regular_input__c.field-meta.xml
<CustomField>
    <fullName>cpm__Regular_input__c</fullName>
    <label>Regular input</label>
    <length>255</length>
    <type>Text</type>
</CustomField>