force-app/main/default/objects/cpm__DummyPSP_Settings__c/fields/cpm__Report_From__c.field-meta.xml
<CustomField>
    <fullName>cpm__Report_From__c</fullName>
    <label>Report From</label>
    <type>Date</type>
</CustomField>