force-app/main/default/objects/cpm__DummyPSP_Settings__c/fields/cpm__Some_Number__c.field-meta.xml
<CustomField>
    <fullName>cpm__Some_Number__c</fullName>
    <label>Some Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>