force-app/main/default/objects/cpm__DummyPSP_Settings__c/fields/cpm__URL__c.field-meta.xml
<CustomField>
    <fullName>cpm__URL__c</fullName>
    <label>URL</label>
    <type>Url</type>
</CustomField>